syntax = "proto3";

message TimeRequestFilter {
    int64 start = 1;
    int64 end = 2;
    int32 count = 3;
}

message SelectionTimeRequestFilter {
    int64 start = 1;
    int64 end = 2;
    int32 count = 3;
    repeated int64 items = 4;
}

message XYSeries {
    string name = 1;
    repeated int64 x = 2;
    repeated int32 y = 3;
}

message XYModelResponse {
    repeated XYSeries model = 1;
    string status = 2;
    string statusMessage = 3;
}

message XYTree {
    int64 id = 1;
    int64 parentId = 2;
}

message TreeXYModelResponse {
    repeated XYTree model = 1;
    string status = 2;
    string statusMessage = 3;
}

service CpuUsageService {
    rpc fetchTree(TimeRequestFilter) returns (TreeXYModelResponse) {}
    rpc fetchXY(SelectionTimeRequestFilter) returns (XYModelResponse) {}
}